# wb-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.docx  docker-compose.yml  pyproject.toml  web.docx
src/api/: client.py  config.py  exporters.py  main.py  models.py  sync_service.py
src/api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/api/marketplaces/: __init__.py  base.py  ozon.py  wb.py  yandex.py
tests/: test_main.py
tools/nsfw-pipeline/: .gitignore  README.md  pyproject.toml
tools/nsfw-pipeline/configs/: pipeline.example.json
tools/nsfw-pipeline/src/nsfw_pipeline/: detectors.py  main.py  processor.py  types.py
tools/nsfw-pipeline/tests/: test_main.py
