[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "api"
version = "0.1.0"
description = "Astkol supplier API client for catalog, stock, groups and marketplace feeds"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.2",
  "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]

[project.scripts]
api = "api.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
